--- a/expert_connect/templates/create_profile.html
+++ b/expert_connect/templates/create_profile.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+
+{% block content %}
 <div class="create-profile-container">
   <h2>Create Your Profile</h2>
 
@@ -37,7 +39,9 @@
       <div class="error-message">{{ form.bio.errors.0 }}</div>
       {% endif %}
     </div>
-    {% endif %} {% if form.description %}
+    {% endif %}
+
+    {% if form.description %}
     <div class="form-group">
       <label for="{{ form.description.id_for_label }}">Description:</label>
       {{ form.description }} {% if form.description.errors %}
@@ -54,28 +58,36 @@
       <div class="error-message">{{ form.email.errors.0 }}</div>
       {% endif %}
     </div>
-    {% endif %} {% if form.website_url %}
+    {% endif %}
+
+    {% if form.website_url %}
     <div class="form-group">
       <label for="{{ form.website_url.id_for_label }}">Website URL:</label>
       {{ form.website_url }} {% if form.website_url.errors %}
       <div class="error-message">{{ form.website_url.errors.0 }}</div>
       {% endif %}
     </div>
-    {% endif %} {% if form.linkedin_url %}
+    {% endif %}
+
+    {% if form.linkedin_url %}
     <div class="form-group">
       <label for="{{ form.linkedin_url.id_for_label }}">LinkedIn URL:</label>
       {{ form.linkedin_url }} {% if form.linkedin_url.errors %}
       <div class="error-message">{{ form.linkedin_url.errors.0 }}</div>
       {% endif %}
     </div>
-    {% endif %} {% if form.twitter_url %}
+    {% endif %}
+
+    {% if form.twitter_url %}
     <div class="form-group">
       <label for="{{ form.twitter_url.id_for_label }}">Twitter/X URL:</label>
       {{ form.twitter_url }} {% if form.twitter_url.errors %}
       <div class="error-message">{{ form.twitter_url.errors.0 }}</div>
       {% endif %}
     </div>
-    {% endif %} {% if form.instagram_url %}
+    {% endif %}
+
+    {% if form.instagram_url %}
     <div class="form-group">
       <label for="{{ form.instagram_url.id_for_label }}">Instagram URL:</label>
       {{ form.instagram_url }} {% if form.instagram_url.errors %}
